--- a/index.html
+++ b/index.html
@@ -3,37 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms of Service - 『 𝙄𝙣𝙙𝙚𝙚𝙙 𝙏𝙧𝙖𝙘𝙠™ 』</title>
+    <title>Privacy Policy - 『 𝙄𝙣𝙙𝙚𝙚𝙙 𝙏𝙧𝙖𝙘𝙠™ 』</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Terms of Service - 『 𝙄𝙣𝙙𝙚𝙚𝙙 𝙏𝙧𝙖𝙘𝙠™ 』</h1>
+        <h1>Privacy Policy</h1>
     </header>
     <main>
         <section>
             <h2>1. Introduction</h2>
-            <p>Welcome to 『 𝙄𝙣𝙙𝙚𝙚𝙙 𝙏𝙧𝙖𝙘𝙠™ 』 Discord bot service operated by Onikisu. By using our bot, you agree to comply with and be bound by the following terms and conditions.</p>
+            <p>Welcome to 『 𝙄𝙣𝙙𝙚𝙚𝙙 𝙏𝙧𝙖𝙘𝙠™ 』. This Privacy Policy explains how we collect, use, and protect your personal information when you use our Discord bot.</p>
         </section>
         <section>
-            <h2>2. Usage of the Bot</h2>
-            <p>The bot has all administrative permissions and should be used responsibly within your Discord server. Misuse of the bot can lead to removal and potential banning from using our services.</p>
+            <h2>2. Information We Collect</h2>
+            <p>We collect information to provide better services to our users. This includes information you provide directly, such as your Discord username and messages, and information from your interactions with our bot.</p>
         </section>
         <section>
-            <h2>3. User Conduct</h2>
-            <p>Users must respect the guidelines and policies of the Discord platform while using the bot. Any form of harassment, abuse, or inappropriate behavior will not be tolerated and may result in removal from the service.</p>
+            <h2>3. Use of Information</h2>
+            <p>We use the information we collect to operate and improve our bot, ensure security, and provide user support. We do not share your personal information with third parties except as required by law.</p>
         </section>
         <section>
-            <h2>4. Privacy</h2>
-            <p>We respect your privacy. Any data collected by the bot will be used solely for improving the user experience and functionality of the service.</p>
+            <h2>4. Permissions</h2>
+            <p>Our bot requires various permissions to function effectively, including but not limited to: administration, managing messages, reading and writing messages, and others. These permissions are essential for providing the desired functionalities and maintaining the bot's operations.</p>
         </section>
         <section>
-            <h2>5. Changes to the Terms</h2>
-            <p>We reserve the right to modify these terms at any time. Changes will be notified to users through updates in the bot's announcements channel.</p>
+            <h2>5. Data Security</h2>
+            <p>We implement security measures to protect your information. However, please be aware that no security system is impenetrable and we cannot guarantee the absolute security of your data.</p>
         </section>
         <section>
-            <h2>6. Contact Information</h2>
-            <p>If you have any questions or concerns about these Terms of Service, please contact Onikisu at <a href="mailto:JoanOnikisu@Outlook.com">JoanOnikisu@Outlook.com</a>.</p>
+            <h2>6. Contact Us</h2>
+            <p>If you have any questions or concerns about our Privacy Policy, please contact us at <a href="mailto:JoanOnikisu@Outlook.com">JoanOnikisu@Outlook.com</a>.</p>
         </section>
     </main>
     <footer>
